5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1684_1872.log
== TEST (2019-04-27 14:35:25) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if (x == 0) and (y == 0):
	print('Origem')
elif (x == 0):
	print("Eixo X")
elif (y == 0):
	print("Eixo Y")
elif (x > 0)
	if (y > 0):
		print("Q1")
	elif (y < 0):
		print ("Q4")
elif (x < 0):
	if (y > 0):
		print("Q2")
	elif (y < 0):
		print("Q3")

-- ERROR:
File "XXXX", line 12
    elif (x > 0)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:35:32) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if (x == 0) and (y == 0):
	print('Origem')
elif (x == 0):
	print("Eixo X")
elif (y == 0):
	print("Eixo Y")
elif (x > 0):
	if (y > 0):
		print("Q1")
	elif (y < 0):
		print ("Q4")
elif (x < 0):
	if (y > 0):
		print("Q2")
	elif (y < 0):
		print("Q3")

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:35:41) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if (x == 0) and (y == 0):
	print('Origem')
elif (x == 0):
	print("Eixo X")
elif (y == 0):
	print("Eixo Y")
elif (x > 0):
	if (y > 0):
		print("Q1")
	elif (y < 0):
		print ("Q4")
elif (x < 0):
	if (y > 0):
		print("Q2")
	elif (y < 0):
		print("Q3")

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:35:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if (x == 0) and (y == 0):
	print('Origem')
elif (x == 0):
	print("Eixo X")
elif (y == 0):
	print("Eixo Y")
elif (x > 0):
	if (y > 0):
		print("Q1")
	elif (y < 0):
		print ("Q4")
elif (x < 0):
	if (y > 0):
		print("Q2")
	elif (y < 0):
		print("Q3")

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-27 14:36:28) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if (x == 0) and (y == 0):
	print('Origem')
elif (x == 0):
	print("Eixo Y")
elif (y == 0):
	print("Eixo X")
elif (x > 0):
	if (y > 0):
		print("Q1")
	elif (y < 0):
		print ("Q4")
elif (x < 0):
	if (y > 0):
		print("Q2")
	elif (y < 0):
		print("Q3")

-- OUTPUT:
Q4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-27 14:36:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

x = float(input("x: "))
y = float(input("y: "))

if (x == 0) and (y == 0):
	print('Origem')
elif (x == 0):
	print("Eixo Y")
elif (y == 0):
	print("Eixo X")
elif (x > 0):
	if (y > 0):
		print("Q1")
	elif (y < 0):
		print ("Q4")
elif (x < 0):
	if (y > 0):
		print("Q2")
	elif (y < 0):
		print("Q3")

-- EXECUTION TIME:
0.250549
-- TEST CASE 1:
---- input:
4.5
-2.2
---- correct output:
Q4
---- user output:
Q4
-- TEST CASE 2:
---- input:
0.1
0
---- correct output:
Eixo X
---- user output:
Eixo X
-- TEST CASE 3:
---- input:
0.0
0.0
---- correct output:
Origem
---- user output:
Origem
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
